Mobile content jump fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,31 @@ body {
   background-color: #0a0a0a;
   color: #c7c7c7;
 }
+
+/* @media only screen and (max-width: 1169px) {
+  .vertical-timeline--animate  .vertical-timeline-element-content.bounce-in {
+    visibility: visible;
+    animation: timeline-slide 0.6s;
+  }
+}
+
+@keyframes timeline-slide {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+
+  60% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} */
+
+html,
+body {
+  overflow-x: hidden;
+}
